--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -2,8 +2,8 @@
   background-color: white;
   padding: 0.5em 2em;
   // margin: 0.5em 2em;
-  height: 80px;
-  width: 100vw;
+  min-height: 80px;
+  // width: 100vw;
   border-bottom: 5px solid rgb(160, 160, 160);
 
   //flexbox
