--- a/src/components/ReviewList.scss
+++ b/src/components/ReviewList.scss
@@ -1,7 +1,7 @@
 .ReviewList {
   background-color: #f2f2f2;
-  margin-left: 4em;
-  margin-right: 4em;
+  // margin-left: 4em;
+  // margin-right: 4em;
   padding: 2em 1em;
 
 }
