--- a/src/components/Services.scss
+++ b/src/components/Services.scss
@@ -4,7 +4,7 @@
   border-radius: 5px;
   gap: 10px;
   background-color: #f2f2f2;
-  margin: 4em;
+  // margin: 4em;
   padding: 4em;
 
   .serviceBox {
